--- a/languages/nl_NL.po
+++ b/languages/nl_NL.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Pilot Fish 0.3.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-05-19 21:45-0500\n"
-"PO-Revision-Date: 2013-05-19 21:45-0500\n"
+"POT-Creation-Date: 2013-05-19 21:46-0500\n"
+"PO-Revision-Date: 2013-05-19 21:47-0500\n"
 "Last-Translator: Daniel Zhao <daniel@danielatwork.com>\n"
 "Language-Team: Daniel Zhao <daniel@danielatwork.com>\n"
 "Language: \n"
@@ -19,14 +19,14 @@ msgstr ""
 #: pilot-fish/taxonomy-project_type.php:34
 #: pilot-fish/search.php:41
 msgid "&larr; previous"
-msgstr "&larr; anterior"
+msgstr "&larr; vorige"
 
 #: pilot-fish/blog.php:35
 #: pilot-fish/archive-project.php:35
 #: pilot-fish/taxonomy-project_type.php:35
 #: pilot-fish/search.php:42
 msgid "next &rarr;"
-msgstr "siguiente &rarr;"
+msgstr "volgende &rarr;"
 
 #: pilot-fish/taxonomy-project_type.php:14
 msgid "Posts Categorized:"
@@ -34,49 +34,49 @@ msgstr ""
 
 #: pilot-fish/image.php:18
 msgid "&larr; Return to"
-msgstr "&larr; Vuelve a"
+msgstr "&larr; Terug naar"
 
 #: pilot-fish/image.php:23
 #: pilot-fish/content-quote.php:10
 #: pilot-fish/content-standard.php:10
 #: pilot-fish/content-image.php:10
 msgid "Continue Reading &rarr;"
-msgstr "Sigue leyendo &rarr;"
+msgstr "Lees verder &rarr;"
 
 #: pilot-fish/image.php:24
 #: pilot-fish/content-quote.php:22
 #: pilot-fish/content-standard.php:22
 #: pilot-fish/content-image.php:22
 msgid "Pages:"
-msgstr "Páginas:"
+msgstr "Paginas:"
 
 #: pilot-fish/image.php:38
 #: pilot-fish/content-quote.php:31
 #: pilot-fish/content-standard.php:31
 #: pilot-fish/content-image.php:31
 msgid "No Response &darr;"
-msgstr "Sin respuesta &darr;"
+msgstr "Geen reactie &darr;"
 
 #: pilot-fish/image.php:38
 #: pilot-fish/content-quote.php:31
 #: pilot-fish/content-standard.php:31
 #: pilot-fish/content-image.php:31
 msgid "One Response &darr;"
-msgstr "Una respuesta &darr;"
+msgstr "1 reactie &darr;"
 
 #: pilot-fish/image.php:38
 #: pilot-fish/content-quote.php:31
 #: pilot-fish/content-standard.php:31
 #: pilot-fish/content-image.php:31
 msgid "% Responses &darr;"
-msgstr "% respuestas &darr;"
+msgstr "% reacties &darr;"
 
 #: pilot-fish/image.php:42
 #: pilot-fish/content-quote.php:35
 #: pilot-fish/content-standard.php:35
 #: pilot-fish/content-image.php:35
 msgid "TAGS:"
-msgstr "ETIQUETAS:"
+msgstr "Tags:"
 
 #: pilot-fish/image.php:43
 #: pilot-fish/content-quote.php:36
@@ -84,7 +84,7 @@ msgstr "ETIQUETAS:"
 #: pilot-fish/content-image.php:36
 #, php-format
 msgid "FILED UNDER: %s"
-msgstr "ARCHIVADO EN: %s"
+msgstr "Staat onder: %s"
 
 #: pilot-fish/image.php:44
 #: pilot-fish/content-quote.php:8
@@ -95,22 +95,22 @@ msgstr "ARCHIVADO EN: %s"
 #: pilot-fish/content-image.php:37
 #, php-format
 msgid "Permanent Link to %s"
-msgstr "Enlace permanente a %s"
+msgstr "Permanente link naar %s"
 
 #: pilot-fish/image.php:44
 #: pilot-fish/content-quote.php:37
 #: pilot-fish/content-standard.php:37
 #: pilot-fish/content-image.php:37
 msgid "Permalink"
-msgstr "Enlace permanente"
+msgstr "Permalink"
 
 #: pilot-fish/functions.php:24
 msgid "Primary Navigation"
-msgstr "Navegación principal"
+msgstr "Primaire navigatie"
 
 #: pilot-fish/search.php:14
 msgid "We found"
-msgstr " "
+msgstr "Gevonden"
 
 #: pilot-fish/search.php:19
 msgid " &#8211; "
@@ -118,7 +118,7 @@ msgstr " &#8211; "
 
 #: pilot-fish/search.php:21
 msgid "articles for "
-msgstr " resultados de la búsqueda para: "
+msgstr "artikelen voor"
 
 #: pilot-fish/search.php:22
 msgid "<span class=\"post-search-terms\">"
@@ -126,35 +126,35 @@ msgstr "<span class=\"post-search-terms\">"
 
 #: pilot-fish/search.php:24
 msgid "</span><!-- end of .post-search-terms -->"
-msgstr "</span><!-- end of .post-search-terms -->"
+msgstr "</span><!-- einde van .post-search-terms -->"
 
 #: pilot-fish/sidebar-home.php:20
 msgid "featured one"
-msgstr ""
+msgstr "uitgelicht 1"
 
 #: pilot-fish/sidebar-home.php:21
 msgid "Replace the text here in the sidebar-home.php, or add widgets to Featured One area."
-msgstr ""
+msgstr "Vervang de tekst hier in sidebar-home.php, of voeg widgets toe via 'Uitgelicht 1'."
 
 #: pilot-fish/sidebar-home.php:38
 msgid "featured two"
-msgstr ""
+msgstr "uitgelicht 2"
 
 #: pilot-fish/sidebar-home.php:39
 msgid "Replace the text here in the sidebar-home.php, or add widgets to Featured Two area."
-msgstr ""
+msgstr "Vervang de tekst hier in sidebar-home.php, of voeg widgets toe via 'Uitgelicht 2'."
 
 #: pilot-fish/sidebar-home.php:54
 msgid "featured three"
-msgstr ""
+msgstr "uitgelicht 3"
 
 #: pilot-fish/sidebar-home.php:55
 msgid "Replace the text here in the sidebar-home.php, or add widgets to Featured Three area."
-msgstr ""
+msgstr "Vervang de tekst hier in sidebar-home.php, of voeg widgets toe via 'Uitgelicht 3'."
 
 #: pilot-fish/footer.php:22
 msgid "powered by"
-msgstr "creado con"
+msgstr "mogelijk gemaakt door"
 
 #: pilot-fish/footer.php:22
 msgid "http://wordpress.org"
@@ -166,7 +166,7 @@ msgstr "WordPress"
 
 #: pilot-fish/footer.php:23
 msgid "Theme by"
-msgstr "Tema por "
+msgstr "Thema door"
 
 #: pilot-fish/footer.php:23
 msgid "http://danielatwork.com"
@@ -178,164 +178,164 @@ msgstr "Daniel Zhao"
 
 #: pilot-fish/footer.php:27
 msgid "Back to Top"
-msgstr "Vuelve al principio"
+msgstr "Scroll naar boven"
 
 #: pilot-fish/content-quote.php:16
 #: pilot-fish/content-standard.php:16
 #: pilot-fish/content-image.php:16
 msgid "About"
-msgstr "Sobre"
+msgstr "Over"
 
 #: pilot-fish/content-quote.php:40
 #: pilot-fish/content-standard.php:40
 #: pilot-fish/content-image.php:40
 msgid "Edit"
-msgstr "Editar"
+msgstr "Bewerken"
 
 #: pilot-fish/searchform.php:2
 msgid "search here &hellip;"
-msgstr "buscar aquí &hellip;"
+msgstr "zoeken &hellip;"
 
 #: pilot-fish/searchform.php:3
 msgid "Search"
-msgstr "Buscar"
+msgstr "Zoeken"
 
 #: pilot-fish/home.php:16
 msgid "Hello World!"
-msgstr ""
+msgstr "Hallo wereld!"
 
 #: pilot-fish/home.php:18
 msgid "A Minimal, Responsive Portfolio Theme"
-msgstr ""
+msgstr "Een minimaal, responsive portfolio thema"
 
 #: pilot-fish/home.php:19
 msgid "You can edit this section from home.php in the Edit Panel. Happy Blogging! "
-msgstr ""
+msgstr "Je kunt deze sectie bewerken van home.php via het Edit paneel. Geniet van het bloggen!"
 
 #: pilot-fish/home.php:23
 msgid "Featured Widgets Area"
-msgstr "Featured Widgets Area"
+msgstr "Uitgelichte widgets"
 
 #: pilot-fish/single.php:23
 msgid "<span class=\"meta-nav\">&larr;</span> previous post"
-msgstr "<span class=\"meta-nav\">&larr;</span> entrada antigua"
+msgstr "<span class=\"meta-nav\">&larr;</span> vorige post"
 
 #: pilot-fish/single.php:24
 msgid "next post <span class=\"meta-nav\">&rarr;</span>"
-msgstr "entrada nueva <span class=\"meta-nav\">&rarr;</span>"
+msgstr "volgende post <span class=\"meta-nav\">&rarr;</span>"
 
 #: pilot-fish/single-project.php:51
 msgid "<span class=\"meta-nav\">&larr;</span> previous project"
-msgstr "<span class=\"meta-nav\">&larr;</span> projecto antiguo"
+msgstr "<span class=\"meta-nav\">&larr;</span> vorig project"
 
 #: pilot-fish/single-project.php:52
 msgid "next project <span class=\"meta-nav\">&rarr;</span>"
-msgstr "projecto nuevo <span class=\"meta-nav\">&rarr;</span>"
+msgstr "volgende project <span class=\"meta-nav\">&rarr;</span>"
 
 #: pilot-fish/404.php:16
 msgid "404 &#8212; Oops! Deadend Here..."
-msgstr "404 &#8212; ¡Ay! Página no encontrada..."
+msgstr "404 &#8212; Oeps! Niets gevonden..."
 
 #: pilot-fish/404.php:17
 msgid "You can return"
-msgstr "Puede volver a"
+msgstr "Je kunt terug gaan"
 
 #: pilot-fish/404.php:17
 msgid "&larr; Home"
-msgstr "&larr; Inicio"
+msgstr "&larr; Home"
 
 #: pilot-fish/404.php:17
 msgid "or explore other pages and posts."
-msgstr "o explora las otras páginas y entradas"
+msgstr "of andere paginas en posts ontdekken."
 
 #: pilot-fish/page.php:51
 msgid "Page Hierarchy:"
-msgstr "Jerarquía de la página:"
+msgstr "Pagina hierarchie"
 
 #: pilot-fish/archive.php:22
 #, php-format
 msgid "Daily Archives: %s"
-msgstr "Archivo por días: %s"
+msgstr "Dagelijks archief: %s"
 
 #: pilot-fish/archive.php:24
 #, php-format
 msgid "Monthly Archives: %s"
-msgstr "Archivo por meses: %s"
+msgstr "Maandelijks archief: %s"
 
 #: pilot-fish/archive.php:26
 #, php-format
 msgid "Yearly Archives: %s"
-msgstr "Archivo por años: %s"
+msgstr "Jaarlijks archief: %s"
 
 #: pilot-fish/archive.php:30
 #, php-format
 msgid "Author Archives: %s"
-msgstr "Archivo del Autor: %s"
+msgstr "Auteur archief: %s"
 
 #: pilot-fish/comments.php:11
 msgid "This post is password protected. Enter the password to view any comments."
-msgstr "Esta entrada está protegida. Introduce la contraseña para ver los comentarios."
+msgstr "Deze post is beveiligd met een wachtwoord. Voer het wachtwoord in om toegang te krijgen."
 
 #: pilot-fish/comments.php:17
 msgid "No Response to"
-msgstr "Sin respuesta para"
+msgstr "Geen reactie op"
 
 #: pilot-fish/comments.php:17
 msgid "One Response to"
-msgstr "Una respuesta para"
+msgstr "1 reactie op"
 
 #: pilot-fish/comments.php:17
 msgid "% Responses to"
-msgstr "% respuestas para"
+msgstr "% reacties op"
 
 #: pilot-fish/comments.php:25
 msgid "&#8249; previous"
-msgstr "&#8249; anterior"
+msgstr "&#8249; vorige"
 
 #: pilot-fish/comments.php:26
 msgid "next &#8250;"
-msgstr "siguiente &#8250;"
+msgstr "volgende &#8250;"
 
 #: pilot-fish/comments.php:38
 msgid "Name"
-msgstr "Nombre"
+msgstr "Naam"
 
 #: pilot-fish/comments.php:39
 msgid "name (required)"
-msgstr "nombre (requerido)"
+msgstr "naam (vereist)"
 
 #: pilot-fish/comments.php:40
 msgid "E-mail"
-msgstr "Correo electrónico"
+msgstr "E-mail"
 
 #: pilot-fish/comments.php:41
 msgid "email (required)"
-msgstr "correo electrónico (requerido)"
+msgstr "e-mail (vereist)"
 
 #: pilot-fish/comments.php:42
 msgid "Website"
-msgstr "Sitio web"
+msgstr "Website"
 
 #: pilot-fish/comments.php:43
 msgid "website"
-msgstr "sitio web"
+msgstr "website"
 
 #: pilot-fish/includes/template-tags.php:5
 #, php-format
 msgid "<span class=\"%1$s\">Posted on</span> %2$s by %3$s"
-msgstr "<span class=\"%1$s\">Publicado en</span> %2$s por %3$s"
+msgstr "<span class=\"%1$s\">Geplaatst op</span> %2$s door %3$s"
 
 #: pilot-fish/includes/theme-options.php:22
 msgid "Theme Options"
-msgstr ""
+msgstr "Thema opties"
 
 #: pilot-fish/includes/theme-options.php:36
 msgid " Theme Options"
-msgstr ""
+msgstr " Thema opties"
 
 #: pilot-fish/includes/theme-options.php:39
 msgid "Options saved"
-msgstr ""
+msgstr "Opties opgeslagen"
 
 #: pilot-fish/includes/theme-options.php:50
 msgid "Thank you for downloading Pilot Fish (^^) For more information on customizing the theme, please go to "
@@ -355,24 +355,24 @@ msgstr ""
 
 #: pilot-fish/includes/theme-options.php:58
 msgid "Google Analytics"
-msgstr ""
+msgstr "Google Analytics"
 
 #: pilot-fish/includes/theme-options.php:61
 msgid "Add Google Analytics to footer"
-msgstr ""
+msgstr "Voeg Google Analytics toe in footer"
 
 #: pilot-fish/includes/theme-options.php:70
 msgid "Google Analytics Tracking Code"
-msgstr ""
+msgstr "Google Analytics Tracking Code"
 
 #: pilot-fish/includes/theme-options.php:73
 msgid "UA-XXXXX-X"
-msgstr ""
+msgstr "UA-XXXXX-X"
 
 #: pilot-fish/includes/theme-options.php:82
 #, fuzzy
 msgid "Page Hierarchy"
-msgstr "Jerarquía de la página:"
+msgstr "Pagina hierarchie"
 
 #: pilot-fish/includes/theme-options.php:85
 msgid "Add Child Page links to Pages"
@@ -380,21 +380,21 @@ msgstr ""
 
 #: pilot-fish/includes/theme-options.php:91
 msgid "Save Options"
-msgstr ""
+msgstr "Opties opslaan"
 
 #: pilot-fish/includes/scripts.php:63
 msgid "Projects"
-msgstr "Projectos"
+msgstr "Projecten"
 
 #: pilot-fish/includes/scripts.php:64
 msgid "Project"
-msgstr "Projecto"
+msgstr "Project"
 
 #: pilot-fish/includes/scripts.php:93
 #: pilot-fish/includes/scripts.php:94
 #, fuzzy
 msgid "Project Type"
-msgstr "Projecto"
+msgstr "Project"
 
 #: pilot-fish/includes/scripts.php:95
 msgid "Search Project Types"
@@ -403,7 +403,7 @@ msgstr ""
 #: pilot-fish/includes/scripts.php:96
 #, fuzzy
 msgid "All Project Types"
-msgstr "Projectos"
+msgstr "Projecten"
 
 #: pilot-fish/includes/scripts.php:97
 msgid "Parent Project Type"
@@ -428,7 +428,7 @@ msgstr ""
 #: pilot-fish/includes/scripts.php:102
 #, fuzzy
 msgid "New Project Type"
-msgstr "Projecto"
+msgstr "Project"
 
 #: pilot-fish/includes/scripts.php:116
 msgid "Skills"
@@ -441,7 +441,7 @@ msgstr ""
 #: pilot-fish/includes/scripts.php:118
 #, fuzzy
 msgid "Search Skills"
-msgstr "Buscar"
+msgstr "Zoeken"
 
 #: pilot-fish/includes/scripts.php:119
 msgid "All Skills"
@@ -473,43 +473,43 @@ msgstr ""
 
 #: pilot-fish/includes/scripts.php:152
 msgid "Untitled"
-msgstr "Sin nombre"
+msgstr "Geen titel"
 
 #: pilot-fish/includes/scripts.php:180
 msgid "Continue Reading <span class=\"meta-nav\">&rarr;</span>"
-msgstr "Sigue leyendo <span class=\"meta-nav\">&rarr;</span>"
+msgstr "Lees verder <span class=\"meta-nav\">&rarr;</span>"
 
 #: pilot-fish/includes/widgets.php:6
 msgid "Primary Sidebar"
-msgstr "Barra lateral principal"
+msgstr "Primaire sidebar"
 
 #: pilot-fish/includes/widgets.php:14
 msgid "Footer One"
-msgstr ""
+msgstr "Footer 1"
 
 #: pilot-fish/includes/widgets.php:22
 msgid "Footer Two"
-msgstr ""
+msgstr "Footer 2"
 
 #: pilot-fish/includes/widgets.php:30
 msgid "Footer Three"
-msgstr ""
+msgstr "Footer 3"
 
 #: pilot-fish/includes/widgets.php:38
 msgid "Featured One"
-msgstr ""
+msgstr "Uitgelicht 1"
 
 #: pilot-fish/includes/widgets.php:46
 msgid "Featured Two"
-msgstr ""
+msgstr "Uitgelicht 2"
 
 #: pilot-fish/includes/widgets.php:54
 msgid "Featured Three"
-msgstr ""
+msgstr "Uitgelicht 3"
 
 #: pilot-fish/includes/widgets.php:70
 msgid "Use this widget to add a vCard"
-msgstr ""
+msgstr "Gebruik deze widget en voeg toe aan vCard"
 
 #: pilot-fish/includes/widgets.php:71
 msgid "pilotfish: vCard"
@@ -521,29 +521,53 @@ msgstr "vCard"
 
 #: pilot-fish/includes/widgets.php:164
 msgid "Title (optional):"
-msgstr ""
+msgstr "Titel (optioneel):"
 
 #: pilot-fish/includes/widgets.php:168
 msgid "Street Address:"
-msgstr "Calle:"
+msgstr "Adres:"
 
 #: pilot-fish/includes/widgets.php:172
 msgid "City/Locality:"
-msgstr "Ciudad:"
+msgstr "Plaats:"
 
 #: pilot-fish/includes/widgets.php:176
 msgid "State/Region:"
-msgstr "Provincia:"
+msgstr "Provincie:"
 
 #: pilot-fish/includes/widgets.php:180
 msgid "Zipcode/Postal Code:"
-msgstr "Código postal:"
+msgstr "Postcode:"
 
 #: pilot-fish/includes/widgets.php:184
 msgid "Telephone:"
-msgstr "Número de teléfono:"
+msgstr "Telefoon:"
 
 #: pilot-fish/includes/widgets.php:188
 msgid "Email:"
-msgstr "Correo electrónico:"
+msgstr "E-mail:"
 
+#~ msgid ""
+#~ "<p>Thank you for downloading Pilot Fish (^^) For more information on "
+#~ "customizing the theme, please go to <a href=\"http://wordpress."
+#~ "danielatwork.com/pilotfish/faq/\" target=\"_blank\">http://wordpress."
+#~ "danielatwork.com/pilotfish/faq/</a></p>\n"
+#~ "\t\t\t\t\t\t\t<p>Follow Danni on twitter <a href=\"https://twitter.com/"
+#~ "danni1990\" target=\"_blank\">@danni1990</a></p>"
+#~ msgstr ""
+#~ "<p>Bedankt voor het downloaden van Pilot Fish (^^) Voor meer informatie "
+#~ "over het aanpassen van dit thema, bezoek <a href=\"http://wordpress."
+#~ "danielatwork.com/pilotfish/faq/\" target=\"_blank\">http://wordpress."
+#~ "danielatwork.com/pilotfish/faq/</a></p>\n"
+#~ "\t\t\t\t\t\t\t<p>Volg Danni op Twitter <a href=\"https://twitter.com/"
+#~ "danni1990\" target=\"_blank\">@danni1990</a></p>"
+
+#~ msgid "Enable Favicon"
+#~ msgstr "Gebruik favicon"
+
+#~ msgid ""
+#~ "a favicon should be 16 x 16px and named \"favicon.ico\"<br />Please "
+#~ "upload the favicon to the main directory of the theme through FTP."
+#~ msgstr ""
+#~ "een favicon hoort 16x16 pixels te zijn genaamd \"favicon.ico\"<br /"
+#~ ">Upload het favicon in de thema folder via FTP."
