--- a/languages/de_DE.po
+++ b/languages/de_DE.po
@@ -1,118 +1,144 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Pilot Fish 0.3.2\n"
+"Project-Id-Version: MY Pilot Fish v0.3.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-06-09 23:06-0500\n"
-"PO-Revision-Date: 2014-06-09 23:06-0500\n"
+"POT-Creation-Date: 2014-06-09 00:38-0500\n"
+"PO-Revision-Date: 2014-06-09 23:00-0500\n"
 "Last-Translator: Daniel Zhao <daniel@danielatwork.com>\n"
-"Language-Team: Daniel Zhao <daniel@danielatwork.com>\n"
+"Language-Team: \n"
+"Language: de_DE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Poedit 1.5.7\n"
-"X-Poedit-KeywordsList: __;_e\n"
-"_n_noop: 1,2;_c,_nc:4c,1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2\n"
+"X-Poedit-SourceCharset: utf-8\n"
+"X-Poedit-KeywordsList: __;_e;__ngettext:1,2;_n:1,2;__ngettext_noop:1,2;"
+"_n_noop:1,2;_c,_nc:4c,1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2\n"
 "X-Poedit-Basepath: ../\n"
 "X-Textdomain-Support: yes\n"
 "X-Poedit-SearchPath-0: .\n"
 
+# @ pilotfish
 #: 404.php:16
 msgid "404 &#8212; Oops! Deadend Here..."
-msgstr "404 &#8212; お探しのページは見つかりませんでした。"
+msgstr "404 &#8212; Uuuups! Nix gefunden..."
 
+# @ pilotfish
 #: 404.php:17
 msgid "You can return"
-msgstr " "
+msgstr "Du kannst zurückgehen"
 
+# @ pilotfish
 #: 404.php:17
 msgid "&larr; Home"
-msgstr "ホームに戻る &larr;"
+msgstr "&larr; Home"
 
+# @ pilotfish
 #: 404.php:17
 msgid "or explore other pages and posts."
-msgstr "または他のページを検索してみてください。"
+msgstr "oder andere Seiten oder Posts ansehen."
 
+# @ pilotfish
 #: archive-project.php:34 archive.php:49 index.php:25 page.php:80
 #: search.php:41 taxonomy-project_type.php:34 taxonomy-skills.php:34
 msgid "&larr; previous"
-msgstr "&larr; 前のページ"
+msgstr "&larr; Ältere Posts"
 
+# @ pilotfish
 #: archive-project.php:35 archive.php:50 index.php:26 page.php:81
 #: search.php:42 taxonomy-project_type.php:35 taxonomy-skills.php:35
 msgid "next &rarr;"
-msgstr "次のページ &rarr;"
+msgstr "Neuere Posts &rarr;"
 
+# @ pilotfish
 #: archive.php:22
 #, php-format
 msgid "Daily Archives: %s"
-msgstr "日別アーカイブ: %s"
+msgstr "Tägliche Archive: %s"
 
+# @ pilotfish
 #: archive.php:24
 #, php-format
 msgid "Monthly Archives: %s"
-msgstr "月別アーカイブ: %s"
+msgstr "Monatliche Archive: %s"
 
+# @ pilotfish
 #: archive.php:26
 #, php-format
 msgid "Yearly Archives: %s"
-msgstr "年別アーカイブ: %s"
+msgstr "Jährliche Archive: %s"
 
+# @ pilotfish
 #: archive.php:30
 #, php-format
 msgid "Author Archives: %s"
-msgstr "投稿者別アーカイブ: %s"
+msgstr "Autoren-Archive: %s"
 
+# @ pilotfish
 #: comments.php:11
 msgid ""
 "This post is password protected. Enter the password to view any comments."
 msgstr ""
-"この投稿はパスワードで保護されています。表示するには、パスワードを入力してく"
-"ださい。"
+"Dieser Post ist mit einem Passwort geschützt. Passwort eingeben um "
+"Kommentare anzusehen."
 
+# @ pilotfish
 #: comments.php:17
 msgid "No Response to"
-msgstr "コメント（0）"
+msgstr "Keine Antworten auf"
 
+# @ pilotfish
 #: comments.php:17
 msgid "One Response to"
-msgstr "コメント（1）"
+msgstr "Eine Antwort auf"
 
+# @ pilotfish
 #: comments.php:17
 msgid "% Responses to"
-msgstr "コメント（%）"
+msgstr "% Antworten auf"
 
+# @ pilotfish
 #: comments.php:25
 msgid "&#8249; previous"
-msgstr "&#8249; 古いコメント"
+msgstr "&#8249; Vorheriger"
 
+# @ pilotfish
 #: comments.php:26
 msgid "next &#8250;"
-msgstr "新しいコメント &#8250;"
+msgstr "Weiter &#8250;"
 
+# @ pilotfish
 #: comments.php:38
 msgid "Name"
-msgstr "お名前"
+msgstr "Name"
 
+# @ pilotfish
 #: comments.php:39
 msgid "name (required)"
-msgstr "お名前(必須)"
+msgstr "Name (erforderlich)"
 
+# @ pilotfish
 #: comments.php:40
 msgid "E-mail"
-msgstr "メールアドレス (非公開)"
+msgstr "E-Mail"
 
+# @ pilotfish
 #: comments.php:41
 msgid "email (required)"
-msgstr "メールアドレス(必須)"
+msgstr "E-Mail (erforderlich)"
 
+# @ pilotfish
 #: comments.php:42
 msgid "Website"
-msgstr "ウェブサイト"
+msgstr "Webseite"
 
+# @ pilotfish
 #: comments.php:43
 msgid "website"
-msgstr "ウェブサイト"
+msgstr "Webseite"
 
+# @ pilotfish
 #: content-aside.php:8 content-aside.php:37 content-gallery.php:8
 #: content-gallery.php:37 content-image.php:8 content-image.php:37
 #: content-link.php:20 content-link.php:49 content-quote.php:8
@@ -120,157 +146,181 @@ msgstr "ウェブサイト"
 #: content-status.php:8 content-status.php:38 image.php:44
 #, php-format
 msgid "Permanent Link to %s"
-msgstr "%s へのパーマリンク"
+msgstr "Permalink zu %s"
 
+# @ pilotfish
 #: content-aside.php:10 content-gallery.php:10 content-image.php:10
 #: content-link.php:23 content-quote.php:10 content-standard.php:10
 #: content-status.php:11 image.php:23 page.php:19 single-project.php:17
 msgid "Continue Reading &rarr;"
-msgstr "続きを読む &rarr;"
+msgstr "Weiterlesen &rarr;"
 
+# @ pilotfish
 #: content-aside.php:16 content-gallery.php:16 content-image.php:16
 #: content-link.php:29 content-quote.php:16 content-standard.php:16
 #: content-status.php:17 single-project.php:23
 msgid "About"
-msgstr " "
+msgstr "Über"
 
+# @ pilotfish
 #: content-aside.php:22 content-gallery.php:22 content-image.php:22
 #: content-link.php:35 content-quote.php:22 content-standard.php:22
 #: content-status.php:23 image.php:24 page.php:20 single-project.php:29
 msgid "Pages:"
-msgstr "ページ"
+msgstr "Seiten:"
 
+# @ pilotfish
 #: content-aside.php:31 content-gallery.php:31 content-image.php:31
 #: content-link.php:43 content-quote.php:31 content-standard.php:31
 #: content-status.php:32 image.php:38 page.php:66 single-project.php:38
 msgid "No Response &darr;"
-msgstr "コメントはまだありません &darr;"
+msgstr "Keine Antworten &darr;"
 
+# @ pilotfish
 #: content-aside.php:31 content-gallery.php:31 content-image.php:31
 #: content-link.php:43 content-quote.php:31 content-standard.php:31
 #: content-status.php:32 image.php:38 page.php:66 single-project.php:38
 msgid "One Response &darr;"
-msgstr "コメント（1） &darr;"
+msgstr "Eine Antwort &darr;"
 
+# @ pilotfish
 #: content-aside.php:31 content-gallery.php:31 content-image.php:31
 #: content-link.php:43 content-quote.php:31 content-standard.php:31
 #: content-status.php:32 image.php:38 page.php:66 single-project.php:38
 msgid "% Responses &darr;"
-msgstr "コメント（%） &darr;"
+msgstr "% Antworten &darr;"
 
+# @ pilotfish
 #: content-aside.php:35 content-gallery.php:35 content-image.php:35
 #: content-link.php:47 content-quote.php:35 content-standard.php:35
 #: content-status.php:36 image.php:42
 msgid "TAGS:"
-msgstr "タグ:"
+msgstr "TAGS:"
 
+# @ pilotfish
 #: content-aside.php:36 content-gallery.php:36 content-image.php:36
 #: content-link.php:48 content-quote.php:36 content-standard.php:36
 #: content-status.php:37 image.php:43
 #, php-format
 msgid "FILED UNDER: %s"
-msgstr "カテゴリー: %s"
+msgstr "ABGELEGT UNTER: %s"
 
+# @ pilotfish
 #: content-aside.php:37 content-gallery.php:37 content-image.php:37
 #: content-link.php:49 content-quote.php:37 content-standard.php:37
 #: content-status.php:38 image.php:44
 msgid "Permalink"
-msgstr "パーマリンク"
+msgstr "Permalink"
 
+# @ pilotfish
 #: content-aside.php:40 content-gallery.php:40 content-image.php:40
 #: content-link.php:51 content-quote.php:40 content-standard.php:40
 #: content-status.php:40 page.php:71 single-project.php:47
 msgid "Edit"
-msgstr "編集"
+msgstr "Bearbeiten"
 
+# @ pilotfish
 #: footer.php:22
 msgid "powered by"
-msgstr "powered by"
+msgstr "Realisiert mit"
 
+# @ pilotfish
 #: footer.php:22
 msgid "http://wordpress.org"
 msgstr "http://wordpress.org"
 
+# @ pilotfish
 #: footer.php:23
 msgid "WordPress"
 msgstr "WordPress"
 
+# @ pilotfish
 #: footer.php:23
 msgid "Theme by"
-msgstr "テーマの著者"
+msgstr "Theme von"
 
+# @ pilotfish
 #: footer.php:23
 msgid "http://danielatwork.com"
 msgstr "http://danielatwork.com"
 
+# @ pilotfish
 #: footer.php:24
 msgid "Daniel Zhao"
 msgstr "Daniel Zhao"
 
+# @ pilotfish
 #: footer.php:27
 msgid "Back to Top"
-msgstr "トップへ戻る"
+msgstr "Zurück nach oben"
 
+# @ pilotfish
 #: functions.php:26
 msgid "Primary Navigation"
-msgstr ""
+msgstr "Primäre Navigation"
 
 #: home.php:16
 msgid "Hello World!"
-msgstr "こんにちは！"
+msgstr ""
 
 #: home.php:18
 msgid "A Minimal, Responsive Portfolio Theme"
 msgstr ""
-"シンプルかつレスポンシブなWebデザインに対応する、WordPress専用のテーマです。"
 
 #: home.php:19
 msgid ""
 "You can edit this section from home.php in the Edit Panel. Happy Blogging! "
 msgstr ""
-"この度は『パイロットフィッシュ』をダウンロードいただきまして、誠にありがとう"
-"ございます。このセクションは『テーマ編集』パネルの『home.php』より編集可能で"
-"す。"
 
+# @ pilotfish
 #: home.php:22
 msgid "Featured Widgets Area"
-msgstr "Featured Widgets Area"
+msgstr "Featured Drei"
 
+# @ pilotfish
 #: image.php:18
 msgid "&larr; Return to"
-msgstr "&larr;"
+msgstr "&larr; Zurück zu"
 
+# @ pilotfish
 #: options.php:36
 msgid "Google Analytics"
-msgstr ""
+msgstr "Google Analytics"
 
+# @ pilotfish
 #: options.php:37
 msgid "Add Google Analytics to footer"
-msgstr ""
+msgstr "Google Analytics zum Footer hinzufügen"
 
+# @ pilotfish
 #: options.php:45
 msgid "Google Analytics Tracking Code"
-msgstr ""
+msgstr "Google Analytics Tracking Code"
 
+# @ pilotfish
 #: options.php:46
 msgid "Enter your Google Analytics tracking code here"
-msgstr ""
+msgstr "Google Analytics Tracking Code"
 
+# @ pilotfish
 #: options.php:54
 msgid "Page Hierarchy"
-msgstr "ページの階層:"
+msgstr "Seitenhierarchie"
 
+# @ pilotfish
 #: options.php:55
 msgid "Add Child Page links to Pages"
-msgstr ""
+msgstr "Unterseiten-Links zu Seiten hinzufügen "
 
+# @ pilotfish
 #: options.php:63
 msgid "Featured Image"
-msgstr ""
+msgstr "Featured Eins"
 
+# @ pilotfish
 #: options.php:64
 msgid "Replace Landing Page Featured Image Bavarian Forest"
-msgstr ""
+msgstr "Bild \\\"Bayerischer Wald\\\" auf der Landing Page ersetzen"
 
 #: options.php:71
 msgid "Activate favicon"
@@ -288,264 +338,330 @@ msgstr ""
 msgid "Upload favicon for your site"
 msgstr ""
 
+# @ pilotfish
 #: page.php:51
 msgid "Page Hierarchy:"
-msgstr "ページの階層:"
+msgstr "Seitenhierarchie:"
 
+# @ pilotfish
 #: search.php:14
 msgid "We found"
-msgstr "検索結果"
+msgstr "Wir haben"
 
+# @ pilotfish
 #: search.php:19
 msgid " &#8211; "
 msgstr " &#8211; "
 
+# @ pilotfish
 #: search.php:21
 msgid "articles for "
-msgstr " "
+msgstr "Artikel für "
 
+# @ pilotfish
 #: search.php:22
 msgid "<span class=\"post-search-terms\">"
 msgstr "<span class=\"post-search-terms\">"
 
+# @ pilotfish
 #: search.php:24
 msgid "</span><!-- end of .post-search-terms -->"
-msgstr "</span><!-- end of .post-search-terms -->"
+msgstr "</span><!-- end of .post-search-terms --> gefunden."
 
+# @ pilotfish
 #: searchform.php:2
 msgid "search here &hellip;"
-msgstr "キーワードを入力 &hellip;"
+msgstr "Hier suchen &hellip;"
 
+# @ pilotfish
 #: searchform.php:3
 msgid "Search"
-msgstr "サイト内検索"
+msgstr "Suche"
 
+# @ pilotfish
 #: sidebar-home.php:20
 msgid "featured one"
-msgstr ""
+msgstr "featured eins"
 
+# @ pilotfish
 #: sidebar-home.php:21
 msgid ""
 "Replace the text here in the sidebar-home.php, or add widgets to Featured "
 "One area."
 msgstr ""
+"Text in sidebar-home.php ändern oder Widgets zur Fläche Featured Eins "
+"hinzufügen."
 
+# @ pilotfish
 #: sidebar-home.php:38
 msgid "featured two"
-msgstr ""
+msgstr "featured zwei"
 
+# @ pilotfish
 #: sidebar-home.php:39
 msgid ""
 "Replace the text here in the sidebar-home.php, or add widgets to Featured "
 "Two area."
 msgstr ""
+"Text in sidebar-home.php ändern oder Widgets zur Fläche Featured Zwei "
+"hinzufügen."
 
+# @ pilotfish
 #: sidebar-home.php:54
 msgid "featured three"
-msgstr ""
+msgstr "featured drei"
 
+# @ pilotfish
 #: sidebar-home.php:55
 msgid ""
 "Replace the text here in the sidebar-home.php, or add widgets to Featured "
 "Three area."
 msgstr ""
-"Replace the text here in the sidebar-home.php, or add widgets to Featured "
-"Three area."
+"Text in sidebar-home.php ändern oder Widgets zur Fläche Featured Drei "
+"hinzufügen."
 
+# @ pilotfish
 #: single-project.php:53
 msgid "<span class=\"meta-nav\">&larr;</span> previous project"
-msgstr "<span class=\"meta-nav\">&larr;</span> 過去の作品"
+msgstr "<span class=\"meta-nav\">&larr;</span> Vorheriges Projekt"
 
+# @ pilotfish
 #: single-project.php:54
 msgid "next project <span class=\"meta-nav\">&rarr;</span>"
-msgstr "新しい作品 <span class=\"meta-nav\">&rarr;</span>"
+msgstr "Nächstes Projekt <span class=\"meta-nav\">&rarr;</span>"
 
+# @ pilotfish
 #: single.php:23
 msgid "<span class=\"meta-nav\">&larr;</span> previous post"
-msgstr "<span class=\"meta-nav\">&larr;</span> 過去の投稿"
+msgstr "<span class=\"meta-nav\">&larr;</span> Vorheriger Post"
 
+# @ pilotfish
 #: single.php:24
 msgid "next post <span class=\"meta-nav\">&rarr;</span>"
-msgstr "新しい投稿 <span class=\"meta-nav\">&rarr;</span>"
+msgstr "Nächster Post <span class=\"meta-nav\">&rarr;</span>"
 
+# @ pilotfish
 #: taxonomy-project_type.php:14
 msgid "Project Type:"
-msgstr ""
+msgstr "Projekttyp:"
 
+# @ pilotfish
 #: taxonomy-skills.php:14
 msgid "Project Skills:"
-msgstr ""
+msgstr "Projekt-Fähigkeiten:"
 
+# @ pilotfish
 #: includes/scripts.php:64
 msgid "Projects"
-msgstr "作品"
+msgstr "Projekte"
 
+# @ pilotfish
 #: includes/scripts.php:65
 msgid "Project"
-msgstr "作品"
+msgstr "Projekt"
 
+# @ pilotfish
 #: includes/scripts.php:94 includes/scripts.php:95
 msgid "Project Type"
-msgstr ""
+msgstr "Projekttyp"
 
+# @ pilotfish
 #: includes/scripts.php:96
 msgid "Search Project Types"
-msgstr ""
+msgstr "Projekttypen durchsuchen"
 
+# @ pilotfish
 #: includes/scripts.php:97
 msgid "All Project Types"
-msgstr ""
+msgstr "Alle Projekttypen"
 
+# @ pilotfish
 #: includes/scripts.php:98
 msgid "Parent Project Type"
-msgstr ""
+msgstr "Übergeordneter Projekttyp"
 
+# @ pilotfish
 #: includes/scripts.php:99
 msgid "Parent Project Type:"
-msgstr ""
+msgstr "Übergeordneter Projekttyp:"
 
+# @ pilotfish
 #: includes/scripts.php:100
 msgid "Edit Project Type"
-msgstr ""
+msgstr "Projekttyp ändern"
 
+# @ pilotfish
 #: includes/scripts.php:101
 msgid "Update Project Type"
-msgstr ""
+msgstr "Projekttyp updaten"
 
+# @ pilotfish
 #: includes/scripts.php:102
 msgid "Add New Project Type"
-msgstr ""
+msgstr "Neuen Projekttyp hinzufügen"
 
+# @ pilotfish
 #: includes/scripts.php:103
 msgid "New Project Type"
-msgstr ""
+msgstr "Neue Projekttyp"
 
+# @ pilotfish
 #: includes/scripts.php:117
 msgid "Skills"
-msgstr ""
+msgstr "Fähigkeiten"
 
+# @ pilotfish
 #: includes/scripts.php:118
 msgid "Skill"
-msgstr ""
+msgstr "Fähigkeit"
 
+# @ pilotfish
 #: includes/scripts.php:119
 msgid "Search Skills"
-msgstr ""
+msgstr "Fähigkeiten durchsuchen"
 
+# @ pilotfish
 #: includes/scripts.php:120
 msgid "All Skills"
-msgstr ""
+msgstr "Alle Fähigkeiten"
 
+# @ pilotfish
 #: includes/scripts.php:121
 msgid "Parent Skill"
-msgstr ""
+msgstr "Übergeordnete Fähigkeit"
 
+# @ pilotfish
 #: includes/scripts.php:122
 msgid "Parent Skill:"
-msgstr ""
+msgstr "Übergeordnete Fähigkeit:"
 
+# @ pilotfish
 #: includes/scripts.php:123
 msgid "Edit Skill"
-msgstr ""
+msgstr "Fähigkeit ändern"
 
+# @ pilotfish
 #: includes/scripts.php:124
 msgid "Update Skill"
-msgstr ""
+msgstr "Fähigkeit updaten"
 
+# @ pilotfish
 #: includes/scripts.php:125
 msgid "Add New Skill"
-msgstr ""
+msgstr "Neue Fähigkeit hinzufügen"
 
+# @ pilotfish
 #: includes/scripts.php:126
 msgid "New Skill Name"
-msgstr ""
+msgstr "Neuer Fähigkeitsname"
 
+# @ pilotfish
 #: includes/scripts.php:154
 msgid "Untitled"
-msgstr "無題"
+msgstr "Unbenannt"
 
+# @ pilotfish
 #: includes/scripts.php:182
 msgid "Continue Reading <span class=\"meta-nav\">&rarr;</span>"
-msgstr "続きを読む <span class=\"meta-nav\">&rarr;</span>"
+msgstr "Weiterlesen <span class=\"meta-nav\">&rarr;</span>"
 
+# @ pilotfish
 #: includes/template-tags.php:5
 #, php-format
 msgid "<span class=\"%1$s\">Posted on</span> %2$s by %3$s"
-msgstr "<span class=\"%1$s\">投稿日時</span> %2$s 投稿者 %3$s"
+msgstr "<span class=\"%1$s\">Gepostet am</span> %2$s von %3$s"
 
+# @ pilotfish
 #: includes/widgets.php:6
 msgid "Primary Sidebar"
-msgstr ""
+msgstr "Primäre Seitenleiste"
 
+# @ pilotfish
 #: includes/widgets.php:14
 msgid "Footer One"
-msgstr "Footer One"
+msgstr "Footer Eins"
 
+# @ pilotfish
 #: includes/widgets.php:22
 msgid "Footer Two"
-msgstr "Footer Two"
+msgstr "Footer Zwei"
 
+# @ pilotfish
 #: includes/widgets.php:30
 msgid "Footer Three"
-msgstr "Footer Three"
+msgstr "Footer Drei"
 
+# @ pilotfish
 #: includes/widgets.php:38
 msgid "Featured One"
-msgstr "Featured One"
+msgstr "Featured Eins"
 
+# @ pilotfish
 #: includes/widgets.php:46
 msgid "Featured Two"
-msgstr "Featured Two"
+msgstr "Featured Zwei"
 
+# @ pilotfish
 #: includes/widgets.php:54
 msgid "Featured Three"
-msgstr "Featured Three"
+msgstr "Featured Drei"
 
+# @ pilotfish
 #: includes/widgets.php:70
 msgid "Use this widget to add a vCard"
-msgstr "Use this widget to add a vCard"
+msgstr "Dieses Widget verwenden um eine vCard hinzuzufügen"
 
+# @ pilotfish
 #: includes/widgets.php:71
 msgid "pilotfish: vCard"
-msgstr "パイロットフィッシュ: 電子名刺"
+msgstr "Pilot Fish: vCard"
 
+# @ pilotfish
 #: includes/widgets.php:98
 msgid "vCard"
-msgstr "電子名刺"
+msgstr "vCard"
 
+# @ pilotfish
 #: includes/widgets.php:164
 msgid "Title (optional):"
-msgstr "タイトル"
+msgstr "Anrede (optional):"
 
+# @ pilotfish
 #: includes/widgets.php:168
 msgid "Street Address:"
-msgstr "住所:"
+msgstr "Strasse:"
 
+# @ pilotfish
 #: includes/widgets.php:172
 msgid "City/Locality:"
-msgstr "市区町村:"
+msgstr "Stadt:"
 
+# @ pilotfish
 #: includes/widgets.php:176
 msgid "State/Region:"
-msgstr "都道府県:"
+msgstr "Bundesland / Region:"
 
+# @ pilotfish
 #: includes/widgets.php:180
 msgid "Zipcode/Postal Code:"
-msgstr "郵便番号:"
+msgstr "PLZ:"
 
+# @ pilotfish
 #: includes/widgets.php:184
 msgid "Telephone:"
-msgstr "携帯番号:"
+msgstr "Telefon:"
 
+# @ pilotfish
 #: includes/widgets.php:188
 msgid "Email:"
-msgstr "メールアドレス:"
+msgstr "E-Mail:"
 
+# @ pilotfish
 #: includes/options/includes/class-options-framework-admin.php:85
 #: includes/options/includes/class-options-framework-admin.php:86
 #: includes/options/includes/class-options-framework-admin.php:307
 msgid "Theme Options"
-msgstr ""
+msgstr "Theme-Optionen"
 
 #: includes/options/includes/class-options-framework-admin.php:174
 msgid "Click OK to reset. Any theme settings will be lost!"
@@ -555,9 +671,10 @@ msgstr ""
 msgid "Default options restored."
 msgstr ""
 
+# @ pilotfish
 #: includes/options/includes/class-options-framework-admin.php:259
 msgid "Options saved."
-msgstr ""
+msgstr "Optionen gespeichert."
 
 #: includes/options/includes/class-options-media-uploader.php:63
 msgid "No file chosen"
@@ -581,9 +698,10 @@ msgstr ""
 msgid "View File"
 msgstr ""
 
+# @ pilotfish
 #: includes/options/includes/class-options-sanitization.php:241
 msgid "No Repeat"
-msgstr ""
+msgstr "Keine Antworten auf"
 
 #: includes/options/includes/class-options-sanitization.php:242
 msgid "Repeat Horizontally"
